<resources>
    <string name="app_name">EveryCent</string>
    <string name="action_settings">Settings</string>
    <string name="action_new">New expense</string>
    <string name="action_new_budget">New budget</string>
    <string name="action_reports">Reports</string>
    <string name="set_budget">Set budget</string>
    <string name="budget_limit">Budget limit</string>
    <string name="budget_label">Budget label</string>
    <string name="back_btn_label">Back</string>
    <string name="expense_name">Expense name</string>
    <string name="expense_price">Expense price</string>
    <string name="add_expense_btn_label">Add expense</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_expense">ExpenseActivity</string>
    <string name="title_activity_budget">Budget</string>
    <string name="title_activity_reports">ReportsActivity</string>
    <string name="load_data_header">Load data</string>


    <string name="dash">-</string>
    <string name="scrollViewStart">START OF SCROLLVIEW</string>
    <string name="scrollViewEnd">END OF SCROLLVIEW</string>
    <string name="buttonDeleteExpense">Delete</string>
</resources>
